Fix branding on narrow screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -7,6 +7,8 @@
 
 #branding {
 	display: inline-block;	
+	white-space: nowrap;
+	max-width: 75%;
 	height: 100%;
 	text-decoration: none;
 
@@ -15,15 +17,19 @@
 		filter: unquote('invert()');
 	}
 
+	$branding-gap: 0.5rem;
+
 	& > img[src$="logo.svg"] {
 		// Align the logo bottom edge with the baseline
 		vertical-align: baseline;
+		max-width: calc(15% - $branding-gap);
 	}
 
 	& > img[src$="logotype.svg"] {
 		// Align the bottom edge of "quartersbrief" with the bottom edge of the box
 		vertical-align: bottom;
-		margin-left: 0.5rem;
+		margin-left: $branding-gap;
+		max-width: calc(85% - $branding-gap);
 	}
 }
 
